--- a/playlist-app/templates/new_song.html
+++ b/playlist-app/templates/new_song.html
@@ -1,7 +1,17 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
+<h1>New Song</h1>
+<form id="song-add-form" method="POST">
+  {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
+  'hidden' %}
 
-<h1>Add a form that when submitted creates a new song!</h1>
+  <p>
+    {{ field.label }} {{ field }} {% for error in field.errors %} {{ error }} {%
+    endfor %}
+  </p>
 
+  {% endfor %}
+
+  <button type="submit">Submit</button>
+</form>
 {% endblock %}
