fixed code for adding song to playlist via DD. Showing Song list in UI now in playlist template.

--- a/playlist-app/templates/add_song_to_playlist.html
+++ b/playlist-app/templates/add_song_to_playlist.html
@@ -6,7 +6,7 @@
   {{ form.hidden_tag() }}
   <div class="form-group">
     <label for="song">Select a Song:</label>
-    {{ form.song.choices }}
+    {{ form.song }}
   </div>
 
   <button type="submit" class="btn btn-primary">Submit</button>
